# QuantAlgo

./: .gitignore  nuxt.config.ts  package-lock.json  package.json  project.md  tsconfig.json
.github/workflows/: build.yml
.quantcode/: canvas.json
.quantcode/specs/: full-trading-bot-system-follow-up-review-2.spec.md  full-trading-bot-system-follow-up.spec.md  full-trading-bot-system.spec.md
app/: app.vue
app/assets/css/: main.css
app/components/Backtest/: BacktestComparison.vue  BacktestConfig.vue  BacktestResults.vue  EquityCurveChart.vue
app/components/Charts/: DrawdownChart.vue  EquityCurve.vue  TradeMarkers.vue
app/components/Deploy/: Modal.vue
app/components/Exchange/: BalanceDisplay.vue  ExchangeForm.vue  ExchangeList.vue
app/components/Journal/: CalendarHeatmap.vue  StatsHeader.vue  TradeTable.vue
app/components/Layout/: RightSidebar.vue  Sidebar.vue  ThemeToggle.vue
app/composables/: usePython.ts  useTauriEvent.ts  useTheme.ts
app/layouts/: default.vue
app/pages/: backtest.vue  charts.vue  exchange.vue  index.vue  journal.vue  settings.vue  strategies.vue  terminal.vue
app/shims/: app-manifest.ts
app/stores/: app.ts  backtest.ts  bot.ts  exchange.ts  journal.ts  strategies.ts
app/types/: index.ts
app/utils/: format.ts
python/: setup.py
python/quantalgo/: __init__.py  __main__.py  backtest_engine.py  indicators.py  models.py  runner.py  strategy.py
python/strategies/: ema_cross.py
scripts/: sync-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+8 files in other folders)
